--- a/DecisionTree/决策树.md
+++ b/DecisionTree/决策树.md
@@ -1,6 +1,12 @@
 
 # 决策树
 
+**优点**：计算复杂度不高，输出结果易于理解，对中间值的缺失不敏感，可以处理不相关特征数据。
+
+**缺点**：可能会产生过度匹配。
+
+**适用数据类型**：数值型和标称型
+
 #### 信息熵 & 信息增益
 
 熵（entropy）： 熵指的是体系的混乱的程度，在不同的学科中也有引申出的更为具体的定义，是各领域十分重要的参量。
